[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "horizonguard"
version = "0.1.0"
description = "Geometric uncertainty quantification to prevent high-confidence AI hallucinations."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT License"}
authors = [
  {name = "The BOMA Project"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.18.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/horizonguard" # Update this later
